--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -5665,6 +5665,36 @@ w i z a r d  e l e m e n t s
         }
     }
 }
+form.default .courseware-structural-element-selector {
+    list-style: none;
+    padding-left: 0;
+    .courseware-structural-element-selector-item {
+        .radiobutton {
+            background: none;
+            border: none;
+            padding: 0;
+        }
+        a label {
+            cursor: pointer;
+        }
+        label {
+            display: inline-block;
+            margin-bottom: 0;
+            text-indent: 0;
+            vertical-align: middle;
+        }
+        img {
+            vertical-align: middle;
+            &.inactive {
+                opacity: 0.5;
+            }
+        }
+        ul {
+            list-style: none;
+            padding-left: 18px;
+        }
+    }
+}
 /* * * * * * * * * * * * * * * * * *
 w i z a r d  e l e m e n t s  e n d
 * * * * * * * * * * * * * * * * * */
