--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -1517,7 +1517,7 @@ c o l l a p s i b l e   b o x
         }
 
         img {
-            vertical-align: middle;
+            vertical-align: top;
         }
     }
 
