Resolve "Neuentwicklung Verzeichnisstrukturen"
Closes #1664, #2693, and #2692

Merge request studip/studip!1081

--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -330,7 +330,7 @@ select.sidebar-selectlist {
 
                 .reset-search {
                     background-color: transparent;
-                    border: 1px solid $base-color-60;
+                    border: 1px solid var(--dark-gray-color-30);
                     border-left: 0;
                     border-right: 0;
                     display: inline-block;
