--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -98,6 +98,7 @@
 @import "scss/tooltip";
 @import "scss/tfa";
 @import "scss/tour";
+@import "scss/tree";
 @import "scss/typography";
 @import "scss/user-administration";
 @import "scss/wiki";
