--- a/resources/assets/stylesheets/scss/studip-cke-ui.scss
+++ b/resources/assets/stylesheets/scss/studip-cke-ui.scss
@@ -60,6 +60,9 @@
 
     /* z-index */
     --ck-z-modal: 1003;
+
+    /* tooltips */
+    --ck-color-tooltip-text: var(--color-text);
 }
 
 .ck.ck-editor {
@@ -78,6 +81,7 @@
 /* buttons */
 .ck.ck-button, a.ck.ck-button {
     font-size: 12px;
+    color: var(--base-color);
 }
 
 .ck.ck-button:hover {
@@ -315,22 +319,28 @@ a.ck.ck-button.ck-button_with-text.ck-dropdown__button:not(.ck-disabled):hover {
 
 /* tooltips */
 
+.ck.ck-balloon-panel.ck-tooltip {
+    background-color: transparent;
+}
 
+.ck.ck-balloon-panel.ck-tooltip .ck.ck-tooltip__text,
 .ck.ck-tooltip .ck-tooltip__text {
+    background-color: var(--dark-gray-color-5);
     border: 1px solid var(--dark-gray-color-30);
     box-shadow: inset 0 1px 0 hsla(0,0%,100%,.5);
     font-size: 14px;
     margin-bottom: 8px;
-    padding: 8px;
+    padding: 12px;
     text-align: left;
     text-shadow: 0 1px 0 hsla(0,0%,100%,.5);
     white-space: normal;
     z-index: 10000;
     word-wrap: break-word;
     color: var(--black);
-    top: 4px;
+    top: 12px;
+    position: relative;
 }
-
+.ck.ck-tooltip__text::after,
 .ck.ck-tooltip.ck-tooltip_s .ck-tooltip__text::after {
     content: "";
     height: 0;
@@ -344,6 +354,7 @@ a.ck.ck-button.ck-button_with-text.ck-dropdown__button:not(.ck-disabled):hover {
     margin-right: -8px;
     top: -16px;
 }
+.ck.ck-tooltip__text::before,
 .ck.ck-tooltip.ck-tooltip_s .ck-tooltip__text::before {
     content: "";
     height: 0;
@@ -374,6 +385,15 @@ $editor-min-height: 8em;
     cursor: text;
     min-height: $editor-min-height;
 }
+.ck.ck-editor__editable_inline {
+    border: 1px solid var(--ck-color-base-border);
+}
+.ck.ck-block-toolbar-button {
+    background: var(--ck-color-base-background);
+    border: 1px solid var(--ck-color-base-border);
+    color: var(--base-color);
+    z-index: 10000;
+}
 
 form.default label:not(.undecorated):not(.ck-voice-label) .ck-source-editing-area textarea {
     margin-top: 0;
@@ -391,10 +411,17 @@ form.default .ck-source-editing-area textarea {
 #forum .ck form {
     display: inherit;
 }
-
+.ck.ck-toolbar {
+    background-color: var(--dark-gray-color-5);
+}
 /* toolbar fix for dialogs */
 .ck.ck-toolbar > .ck-toolbar__items {
     max-width: calc(100% - 20px);
+}
+
+/* tooltip fix for balloon panel */
+.ck.ck-balloon-panel.ck-tooltip {
+    padding: 0;
 }
 
 .studip-dialog {
@@ -405,4 +432,8 @@ form.default .ck-source-editing-area textarea {
             resize: vertical;
         }
     }
+}
+/* balloon editor button*/
+.ck.ck-block-toolbar-button {
+    background-color: var(--dark-gray-color-5);
 }
