Resolve "Barrierefreiheit: kontrastreiches Farbschema stellt Bilder und Smileys (in Blubber) schwarz dar."
Closes #2536

Merge request studip/studip!1863

--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -1118,7 +1118,7 @@ a:hover.tree {
 
 }
 
-#blubber_stream_container img,
+#blubber_stream_container .time img,
 .blubber_thread ol.comments > li.theirs .answer_comment > img {
     filter: brightness(0);
 }
