Resolve "Restrukturierung der Veranstaltungsverwaltung inklusive Mehr-Seite"
Closes #2440

Merge request studip/studip!1695

--- a/resources/assets/stylesheets/scss/forms.scss
+++ b/resources/assets/stylesheets/scss/forms.scss
@@ -324,6 +324,7 @@ form.default {
         > * {
             box-sizing: border-box;
             flex: 1 0 auto;
+            max-width: 400px;
 
             &:not(:first-child) {
                 margin-left: 3px;
@@ -596,3 +597,5 @@ form.inline {
         }
     }
 }
+
+
