change color, closes #1382
Closes #1382

Merge request studip/studip!1960

--- a/resources/assets/stylesheets/scss/globalsearch.scss
+++ b/resources/assets/stylesheets/scss/globalsearch.scss
@@ -222,7 +222,7 @@
                     }
 
                     .globalsearch-result-details {
-                        color: $dark-gray-color-80;
+                        color: $black;
                         font-size: $font-size-small;
                     }
                 }
