--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -337,9 +337,13 @@ $sidebarOut: -330px;
             @media not prefers-reduced-motion {
                 animation: slide-in $transition-duration forwards;
             }
-            position: sticky;
+
             top: 100px;
             visibility: visible;
+
+            &:not(.oversized) {
+                position: sticky;
+            }
         }
 
         .sidebar-image {
