Resolve "Banner sind zu groß"
Closes #2943

Merge request studip/studip!1983

--- a/resources/assets/stylesheets/scss/start.scss
+++ b/resources/assets/stylesheets/scss/start.scss
@@ -213,3 +213,12 @@ div.available-widgets {
         }
     }
 }
+
+
+.studip-banner {
+    padding-bottom: 5px;
+    text-align: center;
+    img {
+        max-width: 100%;
+    }
+}
