add form to OptionsWidget and refactor code a bit, fixes #1474
Closes #1474

Merge request studip/studip!2044

--- a/resources/assets/stylesheets/scss/buttons.scss
+++ b/resources/assets/stylesheets/scss/buttons.scss
@@ -142,12 +142,13 @@ button.styleless {
     border: 0;
 }
 button.as-link {
-    border: none;
-    padding: 0px;
-    margin: 0px;
-    cursor: pointer;
     background-color: transparent;
+    border: none;
+    color: $base-color;
+    cursor: pointer;
+    margin: 0px;
+    padding: 0px;
     &:hover {
-        background-color: transparent;
+        color: $active-color;
     }
 }
