hide toggle in print view, fixes #2746
Closes #2746

Merge request studip/studip!2055

--- a/resources/assets/stylesheets/print.less
+++ b/resources/assets/stylesheets/print.less
@@ -29,21 +29,15 @@ body, input, textarea, td, th, blockquote, p, form, ul, h4 {
     font-size: 10pt;
 }
 
-#layout_wrapper {
-    display: block;
-}
 #content {
     margin-right: 0;
 }
 
-#header *, #navigation-level-1-items, #barTopTools, #top-logo, #responsive-menu,
-#barBottommiddle, #header-links, #barBottomshadow, #tabs, #tabs2,
-#layout_infobox, td.infoboxrahmen, td.infobox, td.infobox-img,
-#schedule_icons, #edit_inst_entry, #sidebar, #top-bar,
+#top-bar, #navigation-level-1, #navigation-level-2,
+#responsive-contentbar-container, #sidebar,
+#schedule_icons, #edit_inst_entry,
 .messagebox_buttons a.close, a.button, button.button,
-#sidebar, .helpbar-container, .helpbar,
-#skip_link_navigation, .skip_target, .action-menu,
-#site-title {
+#skip_link_navigation, .skip_target, .action-menu {
     display: none !important;
 }
 
