--- a/resources/assets/stylesheets/scss/header.scss
+++ b/resources/assets/stylesheets/scss/header.scss
@@ -80,9 +80,7 @@ html {
     z-index: 1003;
 
     .action-menu-icon {
-        border-top: 1px solid $dark-gray-color-40;
-        border-right: 1px solid $dark-gray-color-40;
-        border-bottom: 1px solid $dark-gray-color-40;
+        border: 1px solid var(--dark-gray-color-40);
         background-color: $dark-gray-color-5;
         height: 28px;
         margin: 0 32px 0 0;
@@ -105,6 +103,10 @@ html {
             position: absolute;
             left: 100%;
             top: 0;
+        }
+
+        #notification-container + & {
+            border-left: 0;
         }
     }
 }
