adjust resposive sidebar, picked from 07ceef44, fixes #2388
Closes #2388

Merge request studip/studip!2129

--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -546,6 +546,7 @@ $sidebarOut: -330px;
 
     #sidebar {
         height: 100%;
+        overflow-y: auto;
         position: fixed;
         top: 75px;
         transform: translateX($sidebarOut);
