Resolve "Responsive Navigation: Teile der Sidebar nicht ereichbar, wenn sie zu lang ist"
Closes #2388

Merge request studip/studip!2130

--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -545,7 +545,7 @@ $sidebarOut: -330px;
     }
 
     #sidebar {
-        height: 100%;
+        height: calc(100% - 100px);
         overflow-y: auto;
         position: fixed;
         top: 75px;
