--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -3926,6 +3926,7 @@ g a l l e r y  b l o c k
     margin-top: -22px;
     transition: 200ms ease;
     user-select: none;
+    border: none;
 
     &:hover {
         background-color: $base-color;
